Rewrite url loading to support larger files